schaefer/ext_ptseries/logs/cleanup_amps1503939.err
mkdir: cannot create directory ‘/scratch/tyoeasley/brain_representations/schaefer/timeseries/wb_cp/d100’: File exists
ls: cannot access '/scratch/tyoeasley/brain_representations/schaefer/ext_dtseries/wb_cp/d100/*138332*.csv': No such file or directory
mkdir: cannot create directory ‘/scratch/tyoeasley/brain_representations/schaefer/timeseries/wb_cp/d1000’: File exists
ls: cannot access '/scratch/tyoeasley/brain_representations/schaefer/ext_dtseries/wb_cp/d1000/*138332*.csv': No such file or directory
mkdir: cannot create directory ‘/scratch/tyoeasley/brain_representations/schaefer/timeseries/wb_cp/d200’: File exists
ls: cannot access '/scratch/tyoeasley/brain_representations/schaefer/ext_dtseries/wb_cp/d200/*138332*.csv': No such file or directory
mkdir: cannot create directory ‘/scratch/tyoeasley/brain_representations/schaefer/timeseries/wb_cp/d300’: File exists
ls: cannot access '/scratch/tyoeasley/brain_representations/schaefer/ext_dtseries/wb_cp/d300/*138332*.csv': No such file or directory
mkdir: cannot create directory ‘/scratch/tyoeasley/brain_representations/schaefer/timeseries/wb_cp/d600’: File exists
ls: cannot access '/scratch/tyoeasley/brain_representations/schaefer/ext_dtseries/wb_cp/d600/*138332*.csv': No such file or directory
  File "/scratch/tyoeasley/brain_representations/src_py/comp_amps.py", line 7
    sIDs_fname=/scratch/tyoeasley/brain_representations/HCP_IDs_all.csv
               ^
SyntaxError: invalid syntax
